# civilization

./: .gitignore  Launch_CivSim.bat  README.md  launch_civsim.py  pyproject.toml
.github/workflows/: ci.yml
configs/: base.toml
docs/: architecture.md  tuning.md  viewer.md
src/civsim/: __init__.py
src/civsim/agents/: __init__.py  actions.py  decision.py  model.py  perception.py
src/civsim/analysis/: __init__.py  detectors.py  reporting.py
src/civsim/cli/: __init__.py  batch.py  inspect.py  launch.py  run.py  view.py
src/civsim/core/: __init__.py  clock.py  config.py  rng.py  simulation.py
src/civsim/events/: __init__.py  bus.py  trace.py  types.py
src/civsim/launcher/: __init__.py  ui.py
src/civsim/learning/: __init__.py  imitation.py  reinforcement.py  skills.py
src/civsim/life/: __init__.py  aging.py  development.py  reproduction.py
src/civsim/materials/: __init__.py  hearths.py  stores.py  traces.py
src/civsim/memory/: __init__.py  episodic.py  habits.py  social.py  spatial.py
src/civsim/metrics/: __init__.py  collector.py  comparisons.py
src/civsim/social/: __init__.py  attachment.py  coordination.py  relationships.py  sharing.py
src/civsim/viewer/: __init__.py  controller.py  pygame_viewer.py  ui.py  (+2 more)
tests/: conftest.py
tests/integration/: test_behavior.py
tests/seeds/: test_batch_smoke.py
tests/unit/: test_aging.py  test_config.py  test_launcher_ui.py  test_memory.py  test_render_state.py  test_reporting.py  test_rng.py  test_view_model.py  test_viewer_controller.py  test_viewer_terrain.py  test_viewer_ui.py  test_world.py
(+5 files in other folders)
